--- a/static/scss/base.scss
+++ b/static/scss/base.scss
@@ -1,11 +1,8 @@
 @import '../js/node_modules/styledot/scss/main';
 
-
 body {
   background-color: $gray1b;
 }
 
-.hello-world-hover {
-  color: $accessible-blue;
-}
-
+@import "index";
+@import "login";
