ISS-5 adding user models

--- a/static/scss/_index.scss
+++ b/static/scss/_index.scss
@@ -2,3 +2,16 @@
   margin-bottom: 16px;
   width: 640px;
 }
+
+.module-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+
+  .back-button {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-right: 16px;
+  }
+}
