--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -2,7 +2,25 @@
 
 body {
   background-color: $gray1b;
+  font-size: 16px;
+
+  &.registration{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    @import "registration";
+  }
+
+  &.index {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    @import "index";
+  }
 }
 
-@import "index";
-@import "login";
+.hide {
+  display: none;
+}
