--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,16 +1,39 @@
 {% extends 'base.html' %}
 
-{% block body_class %}login{% endblock %}
+{% block body_class %}registration{% endblock %}
 
 {% block content %}
     <div class="sd-card sd-elevation-2 login-form">
         <h1>Login</h1>
-        <form class="login-form-buffer" method="post">
+        <form method="post">
             {% csrf_token %}
-            {{ form.as_p }}
+            {% for field in form %}
+                <div class="sd-form-field">
+                    <label
+                        for="{{ field.id_for_label }}"
+                        class="sd-form-label hide"
+                    >
+                        {{ field.label }}
+                    </label>
+                    <input
+                        class="sd-form-input"
+                        id="{{ field.id_for_label }}"
+                        name="{{ field.html_name }}"
+                        placeholder="{{ field.label }}"
+                        type="{{ field.field.widget.input_type }}" />
+                    {% if field.errors %}
+                        <div class="sd-form-error-msg">
+                            {{ field.errors }}
+                        </div>
+                    {% endif %}
+                </div>
+            {% endfor %}
+            {% if form.non_field_errors %}
+                {{ form.non_field_errors }}
+            {% endif %}
             <div class="button-container">
-                <button class="sd-button-small-yes" type="submit">Login</button>
-                <a class="sd-button-small-yes" href="/accounts/create-account/">Signup</a>
+                <button class="login-button sd-button" type="submit">Login</button>
+                <a class="signup-link sd-button" href="/accounts/create-account/">Signup</a>
             </div>
         </form>
     </div>
