ISS-6 configured webpack and sass watchers and installed hello world react app

--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -1,4 +1,4 @@
-@import '../js/node_modules/styledot/scss/main';
+@import '../../node_modules/styledot/scss/main';
 
 body {
   background-color: $gray1b;
