--- a/templates/base.html
+++ b/templates/base.html
@@ -8,9 +8,9 @@
         {% block title %}Professor CS{% endblock %}
     </title>
     <link rel="stylesheet" href="{% static 'css/main.css' %}" type="text/css"/>
-    <script src={% static "js/bundle.js" %} type="text/javascript"></script>
 </head>
 <body class="{% block body_class %}{% endblock %}">
     {% block content %}{% endblock %}
+    {% block include_js %}{% endblock %}
 </body>
 </html>
