--- a/templates/sample/sample.html
+++ b/templates/sample/sample.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="utf-8">
     <title>Blockly Demo: Generating Javascript</title>
-    <script src="../js/blockly_compressed.js"></script>
-    <script src="../js/javascript_compressed.js"></script>
-    <script src="../js/blocks_compressed.js"></script>
-    <script src="../msg/js/en.js"></script>
+    <script src="../../static/js/blockly/blockly_compressed.js"></script>
+    <script src="../../static/js/blockly/javascript_compressed.js"></script>
+    <script src="../../static/js/blockly/blocks_compressed.js"></script>
+    <script src="../../static/js/msg/js/en.js"></script>
 
-    <script src="./csblocks.js"></script>
-    <link rel="stylesheet" href="csblocks.css">
+    <script src="../../static/js/csblocks.js"></script>
+    <link rel="stylesheet" href="../../static/css/csblocks.css">
 
     <style>
     </style>
@@ -36,7 +36,7 @@
         // put the toolbox in the workspace
         var workspace = Blockly.inject('blocklyDiv',
             {
-                media: '../media/',
+                media: '../../media/',
                 toolbox: document.getElementById('toolbox')
             });
 
