removed media folder, added Hello World

--- a/templates/sample/sample.html
+++ b/templates/sample/sample.html
@@ -36,7 +36,7 @@
         // put the toolbox in the workspace
         var workspace = Blockly.inject('blocklyDiv',
             {
-                media: '../../media/',
+                media: 'https://blockly-demo.appspot.com/static/media/',
                 toolbox: document.getElementById('toolbox')
             });
 
