ISS-1 dockerize application and add support for backend game configurations

--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -19,8 +19,19 @@ body {
 
     @import "index";
   }
+
+  &.game {
+    @import "game";
+  }
 }
 
 .hide {
   display: none;
+}
+
+.header-bar {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 48px;
 }
