--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="{% static 'css/main.css' %}" type="text/css"/>
 </head>
 <body class="{% block body_class %}{% endblock %}">
+    <div id="sd-modal-container"></div>
     {% block content %}{% endblock %}
     {% block include_js %}{% endblock %}
 </body>
