--- a/templates/front/index.html
+++ b/templates/front/index.html
@@ -31,6 +31,7 @@
     {% endfor %}
 
     <div>
+        <a class="sd-button-small-yes" href="{% url 'badges' %}">Awards</a>
         <a class="sd-button-small-no" href="{% url 'logout' %}">Logout</a>
     </div>
 
