--- a/templates/front/badges.html
+++ b/templates/front/badges.html
@@ -9,4 +9,5 @@
             <p>{{ badge.user_has }}</p>
         </div>
     {% endfor %}
+    <a class="sd-button-small-yes" href="/">Home</a>
 {% endblock %}
