--- a/static/scss/_index.scss
+++ b/static/scss/_index.scss
@@ -11,13 +11,17 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
+}
 
-  .back-button {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-right: 16px;
-  }
+.header-text {
+  width: 100%;
+  text-align: center;
+}
+
+.home-button-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
 
 .locked {
