updating hello world and adding run without submit

--- a/templates/front/game.html
+++ b/templates/front/game.html
@@ -39,8 +39,8 @@
             </div>
         </div>
     </div>
-
     <button id="run" class="sd-button-small-yes run-button">Run</button>
+    <button id="run-and-submit" class="sd-button-small-yes run-button">Run and check</button>
 
 {% render_bundle 'main' 'js' %}
 {% endblock %}
