Fixups to hello world module and JS (#47)
* updating hello world and adding run without submit

* fixing bug in next module

--- a/templates/front/game.html
+++ b/templates/front/game.html
@@ -10,10 +10,6 @@
     </h2>
     <div>
         <p>
-            {{ object.game_level.description | safe }}
-        </p>
-        <hr>
-        <p>
             {{ object.game_level.prompt | safe }}
         </p>
     </div>
@@ -39,8 +35,8 @@
             </div>
         </div>
     </div>
-
     <button id="run" class="sd-button-small-yes run-button">Run</button>
+    <button id="run-and-submit" class="sd-button-small-yes run-button">Run and check</button>
 
 {% render_bundle 'main' 'js' %}
 {% endblock %}
